--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,15 @@
-== Devise Example
+== Devise Example for Rails 2.3.x
 
-Example App using devise. http://github.com/plataformatec/devise
+Example App using devise. http://github.com/plataformatec/devise/tree/v1.0
 
 == Installation
 
 Install warden and devise gems if you don't have them installed:
 
-  sudo gem install rails -v=2.3.5
-  sudo gem install warden -v=0.10.4
-  sudo gem install devise -v=1.0.7
-  sudo gem install rails-footnotes -v=3.6.5
+  sudo gem install rails -v=2.3.9
+  sudo gem install warden -v=0.10.9
+  sudo gem install devise -v=1.0.8
+  sudo gem install rails-footnotes -v=3.6.6
 
 Rake devise setup task:
 
@@ -26,4 +26,4 @@ Run the server and use the credentials provided by the rake task to sign in and 
 
 == License
 
-MIT License. Copyright 2009 Plataforma Tecnologia. http://blog.plataformatec.com.br
+MIT License. Copyright 2010 Plataforma Tecnologia. http://blog.plataformatec.com.br
