--- a/README.rdoc
+++ b/README.rdoc
@@ -6,10 +6,10 @@ Example App using devise. http://github.com/plataformatec/devise/tree/v1.0
 
 Install warden and devise gems if you don't have them installed:
 
-  sudo gem install rails -v=2.3.9
-  sudo gem install warden -v=0.10.9
-  sudo gem install devise -v=1.0.8
-  sudo gem install rails-footnotes -v=3.6.6
+  gem install rails -v=2.3.9
+  gem install warden -v=0.10.9
+  gem install devise -v=1.0.9
+  gem install rails-footnotes -v=3.6.6
 
 Rake devise setup task:
 
